--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,57 @@
-Flask
-Flask-JWT-Extended
-Flask-Bcrypt
-Flask-Cors
-Flask-Mail
-Flask-PyMongo
-faiss-cpu
-pdfplumber
-sentence-transformers
-Flask-Dance
-authlib
-python-dotenv
+Authlib==1.4.1
+bcrypt==4.2.1
+blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.1
+dnspython==2.7.0
+faiss-cpu==1.10.0
+filelock==3.17.0
+Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Cors==5.0.0
+Flask-Dance==7.1.0
+Flask-JWT-Extended==4.7.1
+Flask-Mail==0.10.0
+Flask-PyMongo==3.0.1
+fsspec==2025.2.0
+huggingface-hub==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+joblib==1.4.2
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.3
+oauthlib==3.2.2
+packaging==24.2
+pdfminer.six==20231228
+pdfplumber==0.11.5
+pillow==11.1.0
+pycparser==2.22
+PyJWT==2.10.1
+pymongo==4.11.1
+pypdfium2==4.30.1
+python-dotenv==1.0.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.4.1
+sympy==1.13.1
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.49.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+URLObject==2.4.3
+Werkzeug==3.1.3
